--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_improved_updated.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -108,7 +108,6 @@
                     <h2>About Me</h2>
                     <!--<h5>UI-UX Designer</h5>-->
                     <p>My name is Gabriel Matsson, 23 years old from Stockholm, but I'm now currently studying my 3rd year in Computer Science and Software Engineering at Linköping University. </p>
-                    <button type="button">Let's Talk</button>
                 </div>
             </div>
         </section>
@@ -141,6 +140,8 @@
             </div>
         </section>
         <!-- Experience section ends  -->
+
+        <div class="parallax" style="background-image: url('morbius.jpg');"></div>
 
         <!-- Projects section -->
 
@@ -177,6 +178,8 @@
             </div>
         </div>
         <!-- Project section ends  -->
+
+        
 
         <!-- skills section start -->
         <section class="skills" id="skills">
@@ -246,6 +249,7 @@
         </section>
         <!--skills section ends   -->
 
+        <div class="parallax" style="background-image: url('micro4.png');"></div>
 
         <!-- Courses section starts  -->
         <div class="service" id="blogs">
@@ -268,10 +272,10 @@
                             0:{
                                 items:1
                             },
-                            600:{
+                            1000:{
                                 items:2
                             },
-                            1000:{
+                            1250:{
                                 items:3
                             }
                         }
