--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=480; user-scalable=0;" />
+    <meta name="viewport", user-scalable=no">
     <title>Document</title>
 
 <!-- Add in the custom css-->
