Tweaked some responsivness for odd screen sizes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
 
             <div class="box">
-                <div class="card">                   
+                <div class="card" id="proj">                   
                     <h5>D-sektionen website</h5>   
                     <div class="pra">
                         <p>I did after school volunteer work in WebbU and my role was Admin. As an Admin, you are part of the Web Team and responsible for ensuring that the section's digital systems are operational and equipped with the features needed by the section. The digital systems of the section include, among other things, the section's website and member page. Admin duties involve working with full-stack development, both backend and frontend.                 
@@ -165,7 +165,7 @@
                                                
                 </div>
 
-                <div class="card">
+                <div class="card" id="proj">
                     <h5>Reddit filter</h5>
                     <div class="pra">
                         <p> With 3 class mates in the course TDDD35 Large-Scale Distributed Systems and Networks, we created a Reddit filter that filters out all the posts that contain profanity so that we could analyzes the usage of profanity in diffrent subreddits. The filter is a simple example of how to use the PRAW library to interact with the Reddit API and how to filter out posts based on certain criteria. 
@@ -249,7 +249,7 @@
         </section>
         <!--skills section ends   -->
 
-        <div class="parallax" id="webbu" style="background-image: url('images/webbu2.png');"></div>
+        <div class="parallax" id="webbu" style="background-image: url('images/webbu2.PNG');"></div>
 
         <!-- Courses section starts  -->
         <div class="service" id="blogs">
@@ -405,7 +405,7 @@
             <div class="container contactUs">
                 <div class="contact-box">
                     <div class="left contactLeft">
-                        <img src="images/contactus.jpg" class="contact-img" alt="" width="150px " />
+                        <img src="images/contact.PNG" class="contact-img" alt="" width="150px " />
 
                         <div class="contact-info">
                             <p><i class="bi bi-telephone-fill"></i> 073 393 77 30</p>
